force-app/main/default/objects/MUSW__Violation_Type__c/MUSW__Violation_Type__c.object-meta.xml
<CustomObject>
    <customHelp>MUSW__HelpInterface</customHelp>
    <description>Repository of Municipality Code Ordinances and Sections</description>
    <label>Ordinance</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ordinances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>