force-app/main/default/objects/MUSW__Violation_Type__c/fields/Days_to_correct__c.field-meta.xml
<CustomField>
    <fullName>Days_to_correct__c</fullName>
    <label>Days to correct</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>