force-app/main/default/objects/MUSW__Violation_Type__c/fields/MUSW__Abatement_Requirement__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Abatement_Requirement__c</fullName>
    <description>Standardized description of the action that must be taken to correct the violation.  This is displayed on the add/edit violation page by default. This can be used in letters.</description>
    <label>Abatement Requirement</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>