force-app/main/default/objects/MUSW__Violation_Type__c/fields/MUSW__Active__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>The lookup from the violation to the ordinance table should be restricted to only Active Ordinances.  This allows client to retire violations where codes have been changed or replaced without changing the content of historical violations.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>