force-app/main/default/objects/MUSW__Violation_Type__c/fields/MUSW__Citation_Amount__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Citation_Amount__c</fullName>
    <description>This value can be used to standardize the fine amount for a code violation. The DRE would reference this field.</description>
    <label>Citation Amount</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>