force-app/main/default/objects/MUSW__Violation_Type__c/fields/MUSW__Code_Number__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Code_Number__c</fullName>
    <defaultValue>&quot;1-1.1&quot;</defaultValue>
    <description>Typically, this is a chapter within the Code Book.</description>
    <externalId>true</externalId>
    <label>Code Number</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>