force-app/main/default/objects/MUSW__Violation_Type__c/fields/MUSW__Dangerous__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Dangerous__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This value can be pushed to the violation object for reporting and prioritization.</description>
    <label>Dangerous</label>
    <type>Checkbox</type>
</CustomField>