force-app/main/default/objects/MUSW__Violation_Type__c/fields/MUSW__Description__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Description__c</fullName>
    <description>Section Text from Municipality Code Book</description>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>