force-app/main/default/objects/MUSW__Violation_Type__c/fields/MUSW__Estimated_Cost__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Estimated_Cost__c</fullName>
    <description>This value can be pushed to the violation object for fine creation.</description>
    <label>Estimated Cost</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>