force-app/main/default/objects/MUSW__Violation_Type__c/fields/MUSW__Second_Reinspection__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Second_Reinspection__c</fullName>
    <description>Allows a different timeframe for a first reinspection versus a subsequent reinspection. This field only has an impact if it is referenced in the Violation Days_to_Correct__c formula.</description>
    <label>Second Reinspection</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>