force-app/main/default/objects/MUSW__Violation_Type__c/fields/MUSW__SectionDescription__c.field-meta.xml
<CustomField>
    <fullName>MUSW__SectionDescription__c</fullName>
    <description>Specific section within the Code Book.</description>
    <label>Section</label>
    <length>255</length>
    <type>Text</type>
</CustomField>