force-app/main/default/objects/MUSW__Violation_Type__c/fields/No_Reinspections__c.field-meta.xml
<CustomField>
    <fullName>No_Reinspections__c</fullName>
    <formula>If(MUSW__First_Reinspection__c &lt; 1 || ISBLANK(MUSW__First_Reinspection__c ), 0, 
If(MUSW__Second_Reinspection__c &lt; 1 || ISBLANK(MUSW__Second_Reinspection__c), 1,2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No. Reinspections</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>