force-app/main/default/objects/MUSW__Violation_Type__c/recordTypes/MUSW__Condition.recordType-meta.xml
<RecordType>
    <fullName>MUSW__Condition</fullName>
    <active>true</active>
    <label>Condition</label>
</RecordType>