force-app/main/default/objects/MUSW__Violation_Type__c/recordTypes/MUSW__Ordinance.recordType-meta.xml
<RecordType>
    <fullName>MUSW__Ordinance</fullName>
    <active>true</active>
    <label>Ordinance</label>
</RecordType>