force-app/main/default/objects/MUSW__Violation_Type__c/recordTypes/MUSW__Standard_Comment.recordType-meta.xml
<RecordType>
    <fullName>MUSW__Standard_Comment</fullName>
    <active>true</active>
    <label>Standard Comment</label>
</RecordType>